renderer-native: Implement FrameInfo for KMS

Add support for CoglFrameInfo/ClutterFrameInfo on KMS (Wayland sessions).
Specifically adding hardware presentation time and refresh rate, but also
implementing cogl_get_clock_time which is required to compare with
presentation times (see !143). Previously these were only implemented for
the X11 backend.

This is required to enable Clutter to schedule frames at the optimal rate
and time. Without it Clutter will just fall back to the default of 60.00Hz.

This is a prerequisite for fixing:
  https://bugzilla.gnome.org/show_bug.cgi?id=781296
However there remain higher-level issues in Clutter preventing us from
declaring that fixed just yet.